# capi-jira-ETL

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
src/capi_etl/: __main__.py  cli.py  config.py  http.py  logging_setup.py  pipeline.py
src/capi_etl/extract/: github.py  jira.py
src/capi_etl/load/: db.py  schema.py  upsert.py
src/capi_etl/transform/: __init__.py  changelog.py  commits.py  dim_projeto.py  dim_pull_request.py  dim_tarefa.py  dim_user.py  issues.py  pulls.py
tests/: conftest.py  test_pipeline_helpers.py  test_transform_changelog.py  test_transform_dim_pull_request.py  test_transform_dim_user.py  test_transform_dims.py  test_transform_issues.py  test_transform_pulls.py  test_upsert.py
tests/fixtures/: github_pulls.json  jira_issues.json
